All around progress
- great gui progress
-made buttons functional
  -you can go forward and backward
   on days of the month now and it
  displays transactions accordingly
 -the addition button creates a custom prompt now
   - you can add transactions as visual
 divs or you can cancel
 Everything still needs work, but compared to other projects I'm making good progress so far.

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,15 @@
     flex-direction: row;
 }
 
-#content{
+#middle{
     display:flex;
     flex-direction: row;
 }
 
-#content > .side{
+#middle > .side{
     flex-grow: 1;
 }
 
-#content > p{
+#middle > #content{
     flex-grow:2;
 }
