A lot of functionality
CSS:
        Moved style modification made when generating the input prompt and transaction divs into styles in style.css
       Messed around with flex-grow so that the transaction divs align between the date nav buttons on a 1920x1080 screen. Learned that flex-grow also accepts floating point numbers which excited me.

Javascript:
    script.js
        Corrected a spelling mistake that would generate transaction divs after the add button.
        Found out that I don't need an if statement when modifying the current Date number, since the months and years change by themselves if you go below 0 or over a month's max day number.
       Disabled the ability to navigate to future dates, because at this point planning future transactions is in development just yet.

UPDATED THE INPUT PROMPT
-------------------------------------

       Removed the hardcoded values for transactions
      Created a form interface with a, at this point, hardcoded category dropdown menu, a text input for a short description of the purchase and a number input with the step attribute set to "0.01" so as to simulate currency input.
      For the purpose of logging the values append to the prompt window on blur.

UPDATED TRANSACTION DIVS
------------------------------------

    The divs are now evenly divided into three sections, one for every value.

    dataScript.js
       Added an array to local storage that holds every date that has transactions within it for future navigational and other purposes

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,47 @@
     flex-direction: row;
 }
 
+.promptWindow{
+    height : 300px;
+    width : 300px;
+    background-color : gray;
+    position : absolute;
+    align-self: center;
+}
+
+
 #middle{
     display:flex;
     flex-direction: row;
 }
 
-#middle > .side{
+.transaction{
+    display:flex;
+    flex-direction: row;
+    height: 30px;
+    width: 100%;
+}
+
+.cat{
+    flex-grow: 2;
+}
+
+.desc{
+    flex-grow: 10; 
+}
+
+.amount{
     flex-grow: 1;
+    text-align: end;
+}
+
+
+
+#middle > .side{
+    flex-grow: 1.125;
 }
 
 #middle > #content{
     flex-grow:2;
 }
+
