--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /**
  * Description
- * @authors Your Name (you@example.org)
+ * @authors Alen Veselič ()
  * @date    2021-03-16 12:08:42
  * @version 1.0.0
  */
@@ -10,9 +10,29 @@
     margin: 0;
     padding:0;
 
+    color: white;
+    background-color: black;
+
     display:flex;
     flex-direction: column;
  }
+
+ h1{
+     text-align: center;
+ }
+/*
+Remove all button styling
+*/
+ button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 
  #head > button{
 
@@ -63,49 +83,74 @@
     /*display:flex;
     flex-direction: row;*/
     
+    padding: 5px;
+    display:flex;
     height: 30px;
-    width: 100%;
+    width: 98.5%;
+
+    border-bottom: solid 2px white ;
+    margin-bottom: 5px;
+
+    
 }
 .transaction p{
     margin:0;
     padding:0;
-    display: inline-block;
+
+
     padding-left: 10px;
 
-    
+    line-height: 30px;
     white-space: nowrap;
     overflow:hidden;
     text-overflow: ellipsis;
+
 }
 
 .cat{
-    width: 10%;
+    width: 20%;
 }
 
 .desc{
-    width:20%;
+    width:50%;
     text-align: center;
 }
 
 p.amount{
-    width:10%;
+    width:20%;
     text-align: end;
-    padding-right: 30px;
+    padding-right: 10px;
+}
+
+.tranInfo{
+    border-bottom: solid 2px white ;
+    margin-bottom: 2px;
+}
+
+.tranInfo p{
+    display:inline-block;
+    padding: 5px;
+    
 }
 
 .tranData{
-    display:inline-block;
+    display:flex;
+    flex-direction: row;
+
+    
     width:90%;
     height: 100%;
-    line-height: 30px;
+
+    
 }
 
 
 .delButton{
     height:100%;
     width:10%;
-    position:relative;
-    bottom: 11px;
+    
+    /*position:relative;
+    bottom: 11px;*/
 }
 
 
@@ -123,4 +168,6 @@ p.amount{
 #addTran{
     width: 100%;
     height:60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
