--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,43 @@
  * @version 1.0.0
  */
 
+
+
  body{
+
+    font-family: 'Syne Mono', monospace;
+
     margin: 0;
     padding:0;
 
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: rgb(163, 118, 33);
+    background-image: url("../assets/tableWoodHD.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 
     display:flex;
     flex-direction: column;
+
+    
  }
+
 
  h1{
      text-align: center;
+     line-height: 30px;
+
+    
  }
+
+h1, p{
+    white-space: nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis;
+}
+
+
 /*
 Remove all button styling
 */
@@ -33,15 +56,36 @@ Remove all button styling
 	outline: inherit;
 }
 
+#dateForward img{
+
+    transform: scaleX(-1);
+    
+}
+.navArrow{
+
+}
+
+.navArrow img{
+    height: 10vh;
+    width:4vw;
+    
+}
+
+button:disabled img{
+
+    filter:blur(5px);
+
+}
 
  #head > button{
 
     flex-grow: 1;
  }
 
- #head > p{
+ #head > #date{
 
-    flex-grow: 2;
+    flex-grow: 2.57;
+
  }
 
 
@@ -49,10 +93,14 @@ Remove all button styling
     
     display:flex;
     flex-direction: row;
+    background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.507));
 }
 
 #date{
+    display:inline-block;
+    line-height: 55px;
     text-align: center;
+    
 }
 
 .promptWindow{
@@ -86,7 +134,7 @@ Remove all button styling
     padding: 5px;
     display:flex;
     height: 30px;
-    width: 98.5%;
+    /*width: 98.5%;*/
 
     border-bottom: solid 2px white ;
     margin-bottom: 5px;
@@ -123,14 +171,11 @@ p.amount{
 }
 
 .tranInfo{
-    border-bottom: solid 2px white ;
-    margin-bottom: 2px;
+    display:flex;
+    border-bottom: solid 2px gray ;
 }
-
 .tranInfo p{
-    display:inline-block;
-    padding: 5px;
-    
+    padding-left: 10px;
 }
 
 .tranData{
@@ -162,7 +207,11 @@ p.amount{
 #middle > #content{
     flex-grow:1;
     width:26.1vw;
-    background-color: rgb(190, 182, 182);
+    padding: 0 4%;
+    background-color: rgb(255, 255, 255);
+    background-image: url("../assets/crumpledPaperHD.jpg");
+    background-size: cover;
+    
 }
 
 #addTran{
