--- a/styles/style.css
+++ b/styles/style.css
@@ -61,13 +61,43 @@ Remove all button styling
     transform: scaleX(-1);
     
 }
-.navArrow{
 
+#dateForward{
+
+    
+}
+
+#dateBack{
+    
+
+    
+}
+
+@media (max-width: 1000px){
+    .navArrow{
+        position:absolute;
+        height: 100vh;
+        width: 20vw;
+    }
+
+    #dateForward{
+        right:0px;
+
+        background:
+        linear-gradient(to right,rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.815));
+    }
+
+    #dateBack{
+        background:
+        linear-gradient(to left,rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.815));
+    }
 }
 
 .navArrow img{
     height: 10vh;
+    min-height:20px;
     width:4vw;
+    min-width:30px;
     
 }
 
@@ -93,13 +123,28 @@ button:disabled img{
     
     display:flex;
     flex-direction: row;
-    background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.507));
+
+    background:
+        linear-gradient(to top,rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.815));
+
+    /*background-color: rgb(180, 176, 176);
+    border: solid black 5px;
+    border-top:none;*/
+
+
 }
+
+    
+   
+
+
 
 #date{
     display:inline-block;
     line-height: 55px;
     text-align: center;
+
+    
     
 }
 
@@ -133,7 +178,8 @@ button:disabled img{
     
     padding: 5px;
     display:flex;
-    height: 30px;
+    height: 3%;
+    min-height: 30px;
     /*width: 98.5%;*/
 
     border-bottom: solid 2px white ;
@@ -141,6 +187,21 @@ button:disabled img{
 
     
 }
+
+#addTran{
+    width: 100%;
+    height: 6%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#addTran img{
+    width: 5vw;
+    min-width: 20px;
+    height:9vh;
+    min-height: 20px;
+}
+
 .transaction p{
     margin:0;
     padding:0;
@@ -205,6 +266,8 @@ p.amount{
 }
 
 #middle > #content{
+    position: relative; 
+
     flex-grow:1;
     width:26.1vw;
     padding: 0 4%;
@@ -214,9 +277,11 @@ p.amount{
     
 }
 
-#addTran{
-    width: 100%;
-    height:60px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.dayStats{
+
+    position: absolute;
+    bottom: 0px;
+
 }
+
+
