Window prompt layout overhaul
|| BASIC INPUT PROMPT SECTION ||
Made each label, input element pair into their own sections, them sharing space with eachother by flex method.

Added a lot of classes

Changed the display of the buttons to be absolute and moved them into their appropriate positions. At first I messed around with a separate div extending over the current container div until I realised my mistake and misunderstanding of absolute positioning and deleted that div. Also tried working with flex to position the buttons at the bottom. Ultimately decided to just absolutely position them and  have the main two buttons both take 50% of the bottom's width also conveniently centering the text within them.

Added padding and margins to elements aligning them properly

Added placeholder text to the short description text input field

Centered all titles in the prompt window

|| CONFIG SECTION ||

Mostly the same as above, with the exception that I started future proofing it by making the category area it's own section. For future practice each section shall be it's own feature configuration.

Contemplated wether I want to style the hr tag or omit it and get an alternative custom separator solution.

|| Misc. ||

Fixed more global variables
Change the '(optional)' bit of the label to be in the text input's value and added a statement to ignore the value if a user were not to change it. Later found out about the placeholder attribute and used that. Seeing a warning about said new attribute, decided to keep the if statement in place in case it causes trouble and I go back to having the text in the input be value.

|| CSS ||
Added a classes for all new divs played with positioning and sizing.
Also tried using the same paper image I used for the content div and was pleasantly suprised that it didn't look that bad. I'm going to change it in the future, but for now It's better than the previous placeholder solid color.

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,11 +156,95 @@ button:disabled img{
     background-color : gray;
     position : absolute;
     align-self: center;
+
+    background-image: url("../assets/crumpledPaperHD.jpg");
+    background-size: cover;
+
+    padding: 1%;
 }
+
+.inputMain{
+    position:relative;
+}
+
+.promptTitle{
+    text-align: center;
+}
+
+.inputSection{
+    display:flex;
+}
+
+.inputSection input, select{
+    
+    max-height: 20px;
+}
+
+.inputSection select{
+    margin-top: 5%;
+}
+
+.inputSection input{
+    margin-top: 4%;
+}
+
+.configButton{
+    position: absolute;
+    right: 0px;
+    top:0px;
+
+}
+
+.backButton{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+
+    width:50%;
+}
+
+.addButton{
+    position: absolute;
+    bottom: 0px;
+    right:0px;
+
+    width:50%;
+}
+
 
 .inputOptions{
     display: none;
+    
+
+    padding: 1%;
 }
+
+.inputOptions input{
+    margin-top: 3.25%;
+}
+
+.inputOptions input[type = color]{
+    margin-top: 3.5%;
+}
+
+.catConfig{
+    position:relative;
+}
+
+.addCat{
+    position: absolute;
+    left: 0px;
+
+    width: 50%;
+}
+
+.remCat{
+    position: absolute;
+    right:0px;
+
+    width: 50%;
+}
+
 
 .show{
     display:block;
